// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator component UI test 1`] = `
<div
  className="calculator"
>
  <div
    className="result-viewer"
  >
    0
  </div>
  <div
    className="keyboard"
  >
    <div>
      <div
        className="button--root"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          AC
        </button>
      </div>
      <div
        className="button--root"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          +/-
        </button>
      </div>
      <div
        className="button--root"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          %
        </button>
      </div>
      <div
        className="button--root operator"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          ÷
        </button>
      </div>
    </div>
    <div>
      <div
        className="button--root"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          7
        </button>
      </div>
      <div
        className="button--root"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          8
        </button>
      </div>
      <div
        className="button--root"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          9
        </button>
      </div>
      <div
        className="button--root operator"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          x
        </button>
      </div>
    </div>
    <div>
      <div
        className="button--root"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          4
        </button>
      </div>
      <div
        className="button--root"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          5
        </button>
      </div>
      <div
        className="button--root"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          6
        </button>
      </div>
      <div
        className="button--root operator"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          -
        </button>
      </div>
    </div>
    <div>
      <div
        className="button--root"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </div>
      <div
        className="button--root"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          2
        </button>
      </div>
      <div
        className="button--root"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          3
        </button>
      </div>
      <div
        className="button--root operator"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
    </div>
    <div>
      <div
        className="button--root wide"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          0
        </button>
      </div>
      <div
        className="button--root"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          .
        </button>
      </div>
      <div
        className="button--root operator"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          =
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`The render w "0" value 1`] = `
<div
  className="result-viewer"
>
  0
</div>
`;

exports[`The render with number value 1`] = `
<div
  className="result-viewer"
>
  1000
</div>
`;

exports[`The render with string value 1`] = `
<div
  className="result-viewer"
>
  ERROR
</div>
`;
